<resources>
    <string name="app_name">UIETians Hub</string>

    <string name="privacy_1">The D-Zone built the UIETians Hub app as a Free app. This SERVICE is provided by The D-Zone at no cost and is intended for use as is.\n\nThis page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.\n\nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.\n\nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at UIETians Hub unless otherwise defined in this Privacy Policy.</string>
    <string name="privacy_2">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Internet Access. The information that I request will be retained on your device and is not collected by me in any way.\n\nThe app does use third party services that may collect information used to identify you.\n\nLink to privacy policy of third party service providers used by the app\n\n
Google Play Services\n
AdMob\n
Firebase Analytics</string>
    <string name="privacy_3">I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (\“IP\”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="privacy_4">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.\n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="privacy_5">I may employ third-party companies and individuals due to the following reasons:\n\n  To facilitate our Service;\n\  To provide the Service on our behalf;\n  To perform Service-related services; or\n  To assist us in analyzing how our Service is used.\n\nI want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="privacy_6">I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
    <string name="privacy_7">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="privacy_8">These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</string>
    <string name="privacy_9">I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
    <string name="privacy_10">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.</string>

    <string name="char_count">%1$d/%2$d</string>

    <string name="about_us">\"The D-Zone\" is a team of doers who believes in making things simple and organized. At \"The D-Zone\" we innovate, we conceptualize, we discuss, we build, we launch, we market and we rock.\n\nIt\'s the team of hustlers and doers so, ensure the criteria and you are welcome to be part of the team.</string>
    <string name="contact_us">dzoneassociation@gmail.com\n\nhttps://www.linkedin.com/company/the-d-zone/\n\nhttps://www.facebook.com/thedzoned/</string>
</resources>
